--- a/seekbarlibrary/build.gradle
+++ b/seekbarlibrary/build.gradle
@@ -8,7 +8,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -28,4 +28,5 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.zhangliangming:Register:v1.0'
 }
